--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://cdn.pegasus.imarticus.org/imarticus_2/favicon.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Imarticus learning Ahmedabad - Data Science, Analytics, Banking &amp; Finance Course in Ahmedabad</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
@@ -15,7 +15,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="https://kit.fontawesome.com/b7ecb94de9.js" crossorigin="anonymous" ></script>
+  <script src="https://kit.fontawesome.com/b7ecb94de9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
